# shs-rs

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: lint.yaml  test.yaml
benches/: sha256.rs
ct_bench_results/: ct_benches_--release_nightly.txt  ct_benches_--release_stable.txt  ct_benches__nightly.txt  ct_benches__stable.txt
examples/: reference_sha256_ct_bench.rs  sha256_ct_bench.rs
scripts/: run_ct_benches.bash
src/: sha256.rs
tests/: sha256.rs
